[tool.poetry]
name = "beth"
version = "0.2.0"
description = "Open source chess AI framework"
authors = ["Theo Alves Da Costa <theo.alves.da.costa@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/theolvs/beth"
repository = "https://github.com/theolvs/beth"
documentation = "https://github.com/theolvs/beth"

[tool.poetry.dependencies]
python = "^3.7.8"
numpy = "^1.20.1"
pandas = "^1.2.2"
ipywidgets = "^7.6.3"
jupyter = "^1.0.0"
ipython = "^7.20.0"
ipykernel = "^5.4.3"
python-dotenv = "^0.15.0"
tqdm = "^4.56.2"
comet-ml = "^3.3.3"
chess = "^1.4.0"
torch = "^1.7.1"
matplotlib = "^3.3.4"
pytest = "^6.2.2"
black = "^20.8b1"
snakeviz = "^2.1.0"
xlrd = "^2.0.1"
openpyxl = "^3.0.6"
seaborn = "^0.11.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
